Add new page controllers for asking questions

--- a/Movue/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Movue/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -14,6 +14,25 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="fdsajfe;afesadsajfdksjafa;jdskajfdksajfd;ksajfdksajfdk;sajfkdsafkdsa;fdsa" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58I-vS-cPF">
+                                <rect key="frame" x="74" y="185" width="266" height="69"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="69" id="Tyb-Qi-8ol"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="fdsajfe;afesadsajfdksjafa;jdskajfdksajfd;ksajfdksajfdk;sajfkdsafkdsa;fdsa" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hKe-ir-EbY">
+                                <rect key="frame" x="74" y="285" width="266" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
